--- a/practice45.html
+++ b/practice45.html
@@ -32,7 +32,7 @@
          greet();
 
          setTimeout(() => {
-              console.log("We are inside the setTimeout");
+              console.log("We are inside the setTimeout.");
          }, 2000);
 
        
