--- a/practice47.html
+++ b/practice47.html
@@ -13,7 +13,7 @@
         let jsonObj = {
             name: "sweta", 
             course: "BTECH", 
-            food: "he", 
+            food: "hehe", 
             sem: "fourth"
         }
         console.log(jsonObj);
