--- a/practice9.html
+++ b/practice9.html
@@ -44,7 +44,7 @@
 <body>
     <div class="container" id="cont1">
         <h3>This is heading</h3>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minima, vero. Maxime, beatae vel dolores sed, sit nobis tempora molestias earum dicta alias unde totam ea quis ut autem velit! Similique.</p>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minsima, vero. Maxime, beatae vel dolores sed, sit nobis tempora molestias earum dicta alias unde totam ea quis ut autem velit! Similique.</p>
         <a href="https://google.com" class="btn">Read more</a>
         <button class="btn">Contact us</button>
     </div>
