--- a/practice36.html
+++ b/practice36.html
@@ -75,7 +75,7 @@
 
 
            default:
-          console.log("The value of cups is none of them")
+          console.log("The value of cups is none of them.")
           
                break;
       }
