--- a/practice44.html
+++ b/practice44.html
@@ -26,7 +26,7 @@
     </div>
 </body>
 <script>
-    console.log("This is date and time tutorial");
+    console.log("This is date and time tutorial.");
     let now = new Date();
     console.log(now);
 
